Fixing the width of a video frame for the desktop users and adding a function in js to collapse a hamburger menu when clicked elsewhere but it doesn't work yet.

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ html, body {
     
 }
 
-/* SVE OVO JE ZA NAVBAR, DESKTOP I MOB*/
+/* ALL OF THIS IF FOR NAVBAR, DESKTOP AND MOB*/
 nav {
     display: inline;
    
@@ -18,7 +18,6 @@ nav {
 }
 
 .izbornik {
-    display: inline-block;
 	overflow:hidden;
     padding: 0;
     margin-top: 50px;
@@ -60,7 +59,7 @@ li a:hover {
 
 
 @media(max-width:1000px){
-    /* HAMBURGER I NJEGOVA TRANZICIJA */
+    /* HAMBURGER AND ITS TRANSITION */
     .bar{
         display: block;
         width: 25px;
@@ -96,12 +95,12 @@ li a:hover {
 		left: 40px;
 	}
 
-    /* #lokacija iframe {
+     /* #lokacija iframe  {
         width: 500px;
         height: 500px;    
-    } */
+    }  */
 }
-/* SVE OVO JE ZA NAVBAR, DESKTOP I MOB*/
+/* END OF THE NAVBAR*/
 
 #o_nama img{
     width: 80%;
@@ -131,10 +130,11 @@ p {
     margin-top: 25px;
 }
 
-#lokacija {
-    text-align: center;
-    width: 90%;
-    margin: 25px;
+#lokacija iframe {
+    display: block;
+    margin: auto;
+    width: 80%;
+    height: 500px;
 }
 
 #drustvene_mreze {
